fix overflow of congrats text

--- a/src/app/result/result.component.scss
+++ b/src/app/result/result.component.scss
@@ -20,6 +20,9 @@
 @media only screen and (max-width: 480px) {
     .result {
         width: 80vw;
+        h2 {
+            font-size: 40px;
+        }
         div {
             width: 40%;
         }
